fixed linking problem to one page truck page

--- a/creative.html
+++ b/creative.html
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-    <a href="./truck_main.html" class="btn btn-block btn-full-width">Where am I now?</a>
+    <a href="/trucks" class="btn btn-block btn-full-width">Where am I now?</a>
 
    <section id="value" class="services">
         <div class="container">
