--- a/truck_main.html
+++ b/truck_main.html
@@ -178,6 +178,10 @@
       text-align: center;
     }
 
+    .navbar-text {
+      font-size: 14pt;
+    }
+
   </style>
 </head>
 
@@ -192,11 +196,11 @@
           <nav class="navbar navbar-inverse navbar-static-top space_up" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
-                <p class="navbar-text">Date/Time</p>
+                <p class="navbar-text">Date</p>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">May 3rd 2016, 1:26:07 am</p>
+                  <p class="navbar-text">May 3rd 2016</p>
                 </div>
               </ul>
             </div>
@@ -214,7 +218,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">서울특별시 종로구 율곡로 187 6층</p>
+                  <p class="navbar-text">서울특별시 종로구</p>
                 </div>
               </ul>
             </div>
@@ -225,11 +229,11 @@
           <nav class="navbar navbar-inverse navbar-static-top space_up" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
-                <p class="navbar-text">Date/Time</p>
+                <p class="navbar-text">Date</p>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">May 3rd 2016, 1:26:07 am</p>
+                  <p class="navbar-text">May 3rd 2016</p>
                 </div>
               </ul>
             </div>
@@ -247,7 +251,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">서울특별시 종로구 율곡로 187 6층</p>
+                  <p class="navbar-text">서울특별시 종로구</p>
                 </div>
               </ul>
             </div>
@@ -258,11 +262,11 @@
           <nav class="navbar navbar-inverse navbar-static-top space_up" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
-                <p class="navbar-text">Date/Time</p>
+                <p class="navbar-text">Date</p>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">May 3rd 2016, 1:26:07 am</p>
+                  <p class="navbar-text">May 3rd 2016</p>
                 </div>
               </ul>
             </div>
@@ -280,7 +284,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">서울특별시 종로구 율곡로 187 6층</p>
+                  <p class="navbar-text">서울특별시 종로구</p>
                 </div>
               </ul>
             </div>
@@ -291,11 +295,11 @@
           <nav class="navbar navbar-inverse navbar-static-top space_up" role="navigation">
             <div class="container-fluid">
               <div class="navbar-header">
-                <p class="navbar-text">Date/Time</p>
+                <p class="navbar-text">Date</p>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">May 3rd 2016, 1:26:07 am</p>
+                  <p class="navbar-text">May 3rd 2016</p>
                 </div>
               </ul>
             </div>
@@ -313,7 +317,7 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <div class="navbar-header">
-                  <p class="navbar-text">서울특별시 종로구 율곡로 187 6층</p>
+                  <p class="navbar-text">서울특별시 종로구</p>
                 </div>
               </ul>
             </div>
@@ -341,7 +345,7 @@
         <table class="table table-hover">
           <thead style="text-align: center;">
             <tr>
-              <th class="align-center">Date/Time</th>
+              <th class="align-center">Date</th>
               <th class="align-center">Staff Member</th>
               <th class="align-center">Message</th>
             </tr>
@@ -397,7 +401,7 @@
         <table class="table table-hover">
           <thead style="text-align: center;">
             <tr>
-              <th class="align-center">Date/Time</th>
+              <th class="align-center">Date</th>
               <th class="align-center">Staff Member</th>
               <th class="align-center">Message</th>
             </tr>
@@ -452,7 +456,7 @@
         <table class="table table-hover">
           <thead style="text-align: center;">
             <tr>
-              <th class="align-center">Date/Time</th>
+              <th class="align-center">Date</th>
               <th class="align-center">Staff Member</th>
               <th class="align-center">Message</th>
             </tr>
@@ -506,7 +510,7 @@
         <table class="table table-hover">
           <thead style="text-align: center;">
             <tr>
-              <th class="align-center">Date/Time</th>
+              <th class="align-center">Date</th>
               <th class="align-center">Staff Member</th>
               <th class="align-center">Message</th>
             </tr>
@@ -555,15 +559,16 @@
   var window_height = $( window ).height();
   var window_width = $( window ).width();
   var window_divisor = 2.1;
+  var image_size = 330;
 
   console.log(window_height);
 
-  if ((window_height/window_divisor - 10) > 330) {
+  if ((window_height/window_divisor - 10) > image_size) {
     $(".main_truck").width( window_height/window_divisor - 5 );
     $(".main_truck").height( window_height/window_divisor - 5 );
   } else {
-    $(".main_truck").width( 330 );
-    $(".main_truck").height( 330 );
+    $(".main_truck").width( image_size );
+    $(".main_truck").height( image_size );
   }
 
   if (window_width < 1300) {
@@ -590,12 +595,12 @@
 
     // Change the width of the div
     window_height = $( window ).height();
-    if ((window_height/window_divisor - 10) > 330) {
+    if ((window_height/window_divisor - 10) > image_size) {
       $(".main_truck").width( window_height/window_divisor - 5 );
       $(".main_truck").height( window_height/window_divisor - 5 );
     } else {
-      $(".main_truck").width( 330 );
-      $(".main_truck").height( 330 );
+      $(".main_truck").width( image_size );
+      $(".main_truck").height( image_size );
     }
   });
 
