got subscriptions to show up in a rudimentary backoffice

--- a/test.html
+++ b/test.html
@@ -53,6 +53,11 @@
     </div>
   </div>
 
+  <form method="post" action="/getemail">
+      <input type="email" name="email">
+      <input type="submit">
+  </form>
+
   <script>
     $(function() {
 
